Logbook Filter - Added buttons to show active filters - Need to fix visibility and styling - Fixed logbook styling to not use absolute position

--- a/src/Nisshi/ClientApp/src/app/modules/logbook/view/logbook-view.scss
+++ b/src/Nisshi/ClientApp/src/app/modules/logbook/view/logbook-view.scss
@@ -3,13 +3,7 @@
 @import '~@swimlane/ngx-datatable/assets/icons.css';
 
 .fullscreen {
-    position: absolute !important;
-    height: auto !important;
-    top: 7.125rem;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
+    position: inherit !important;
 }
 
 .ngx-datatable.dark {
